html structured and comments added

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -9,6 +9,7 @@
 
 <body>
 
+    <!-- header class section -->
     <header class="header">
 
         <h1>Hori<span class="seo">seo</span>n</h1>
@@ -67,15 +68,16 @@
 
     </content>
 
+    <!-- benefits class section -->
     <benefit class="benefits">
 
         <article class="benefit-lead">
 
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="e"/>
-            <p>
+                <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
-            </p>
+                </p>
 
         </article>
 
@@ -83,9 +85,9 @@
 
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="e"/></img>
-            <p>
+                <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
-            </p>
+                </p>
  
  
         </article>
@@ -94,12 +96,12 @@
 
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="e"></img>
-            <p>
+                <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
-            </p>
+                </p>
         
         </article>
-        
+
     </benefit>
 
     <footer class="footer">
